Refactor tests using the new collection factory methods